--- a/Cricketorganiser/package.json
+++ b/Cricketorganiser/package.json
@@ -15,6 +15,7 @@
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.13.5",
+    "@types/redis": "^4.0.10",
     "prisma": "^6.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
@@ -24,6 +25,8 @@
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.21.2",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "redis": "^5.5.6",
+    "uuid": "^11.1.0"
   }
 }
