--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -7,6 +7,20 @@
     "module": "ESNext",
     "skipLibCheck": true,
 
+
+    
+
+
+    // ...
+    "baseUrl": ".",
+    "paths": {
+      "@/*": [
+        "./src/*"
+      ]
+    },
+    // ...
+  
+
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
@@ -24,3 +38,4 @@
   },
   "include": ["src"]
 }
+
